# crawl_wrtn_characters

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
myproject/: apicrawl_with_run.py  crawler.py  db.py  run.py
tests/: datatest.py  test_data.py
